--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -1,25 +1,34 @@
-name: Java CI
+name: CI-CD Pipeline
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Set up Java 21
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-         distribution: temurin
-         java-version: 21
-         cache: maven
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
 
-      - name: Build and test
-        run: mvn -B clean test
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Build Docker Image
+        run: docker build -t myapp:latest .
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Push Docker Image
+        run: |
+          docker tag myapp:latest ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
